--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="fr">
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -143,8 +143,8 @@
     <div class="topbar">
       <div class="badge">Disponible à l’acquisition</div>
       <div class="lang">
-        <button id="btn-fr" aria-pressed="true">FR</button>
-        <button id="btn-en" aria-pressed="false">EN</button>
+        <button id="btn-fr" aria-pressed="false">FR</button>
+        <button id="btn-en" aria-pressed="true">EN</button>
       </div>
     </div>
 
@@ -157,7 +157,7 @@
         <b>Offres sérieuses uniquement (entreprises & institutions).</b>
       </p>
       <div class="cta">
-        <a class="btn primary" href="mailto:contact@quantacure.ai?subject=Quantacure.ai%20-%20NDA%20%2F%20Proposition&body=Bonjour%2C%0D%0A%0D%0AJe%20souhaite%20obtenir%20votre%20NDA%20et%2Fou%20proposer%20une%20offre%20pour%20Quantacure.ai.%0D%0AEntreprise%20%3A%20%0D%0ANom%20%2F%20Fonction%20%3A%20%0D%0AUsage%20pr%C3%A9vu%20%3A%20%0D%0ABudget%20indicatif%20%3A%20%0D%0A%0D%0ACordialement%2C">
+        <a class="btn primary" href="mailto:contact@quantacure.ai?subject=Quantacure.ai%20-%20NDA%20%2F%20Proposition&body=Bonjour%2C%0D%0A%0D%0AJe%20souhaite%20obtenir%20votre%20NDA%20et%2For%20proposer%20une%20offre%20pour%20Quantacure.ai.%0D%0AEntreprise%20%3A%20%0D%0ANom%20%2F%20Fonction%20%3A%20%0D%0AUsage%20pr%C3%A9vu%20%3A%20%0D%0ABudget%20indicatif%20%3A%20%0D%0A%0D%0ACordialement%2C">
           Proposer une offre / Demander un NDA
         </a>
         <a class="btn" href="#value-fr">Pourquoi ce nom ?</a>
@@ -333,7 +333,7 @@
 
     frBtn.addEventListener('click', () => show('fr'));
     enBtn.addEventListener('click', () => show('en'));
-    show('fr');
+    show('en');
   </script>
 </body>
 </html>
