--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Quantacure.ai — Actif numérique premium, disponible à l’acquisition</title>
-  <meta name="description" content="Quantacure.ai — bannière neutre & lisible pour l’IA quantique et le calcul avancé appliqués à la recherche biomédicale et à la chimie : drug discovery, simulation moléculaire, optimisation R&D, gouvernance des données & explicabilité. Offres sérieuses uniquement (entreprises & institutions)." />
+  <title>Quantacure.ai — Premium digital asset, available for acquisition</title>
+  <meta name="description" content="Quantacure.ai — neutral, C-suite-readable banner for quantum-inspired AI and advanced computing applied to biomedical and chemical R&D: drug discovery, molecular simulation, R&D portfolio optimisation, data governance & explainability. Serious offers only (companies & institutions)." />
 
   <link rel="canonical" href="https://www.quantacure.ai/" />
   <link rel="alternate" href="https://www.quantacure.ai/" hreflang="fr" />
@@ -12,8 +12,8 @@
   <link rel="alternate" href="https://www.quantacure.ai/" hreflang="x-default" />
   <meta name="robots" content="index,follow,max-image-preview:large">
 
-  <meta property="og:title" content="Quantacure.ai — Actif numérique premium" />
-  <meta property="og:description" content="Quantum & Cure — IA quantique, calcul avancé et modélisation numérique pour la recherche biomédicale et la chimie : drug discovery, simulation moléculaire, optimisation R&D, gouvernance & explicabilité." />
+  <meta property="og:title" content="Quantacure.ai — Premium digital asset" />
+  <meta property="og:description" content="Quantum & Cure — quantum-inspired AI, advanced computing and numerical modelling for biomedical and chemical research: drug discovery, molecular simulation, R&D optimisation, governance & explainability." />
   <meta property="og:url" content="https://www.quantacure.ai/" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://www.quantacure.ai/og.jpg" />
@@ -32,7 +32,7 @@
     "name":"Quantacure.ai",
     "url":"https://www.quantacure.ai/",
     "inLanguage":["fr-FR","en-GB","en-US"],
-    "description":"Bannière neutre & lisible pour l’IA quantique et le calcul avancé appliqués à la recherche biomédicale et à la chimie : drug discovery, simulation moléculaire, optimisation R&D, gouvernance des données & explicabilité.",
+    "description":"Neutral, C-suite-readable banner for quantum-inspired AI and advanced computing applied to biomedical and chemical R&D: drug discovery, molecular simulation, R&D portfolio optimisation, data governance & explainability.",
     "sameAs":["https://www.linkedin.com/company/quantacure-ai"],
     "potentialAction":{"@type":"CommunicateAction","target":"mailto:contact@quantacure.ai"}
   }
@@ -141,7 +141,7 @@
 <body>
   <div class="wrap">
     <div class="topbar">
-      <div class="badge">Disponible à l’acquisition</div>
+      <div class="badge">Available for acquisition</div>
       <div class="lang">
         <button id="btn-fr" aria-pressed="false">FR</button>
         <button id="btn-en" aria-pressed="true">EN</button>
@@ -315,7 +315,8 @@
     </section>
 
     <p class="foot muted">
-      © Quantacure.ai — actif numérique premium. Aucune affiliation avec des marques/organismes tiers. Usage descriptif uniquement. Pas de conseil juridique ni médical. — Contact : <a href="mailto:contact@quantacure.ai">contact@quantacure.ai</a>
+      © Quantacure.ai — premium digital asset. No affiliation with third-party brands/organisations.
+      Descriptive use only. No legal or medical advice. — Contact: <a href="mailto:contact@quantacure.ai">contact@quantacure.ai</a>
     </p>
   </div>
 
@@ -333,6 +334,8 @@
 
     frBtn.addEventListener('click', () => show('fr'));
     enBtn.addEventListener('click', () => show('en'));
+
+    // Default: EN for .ai
     show('en');
   </script>
 </body>
