--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 <body>
   <div class="wrap">
     <div class="topbar">
-      <div class="badge">Available for acquisition</div>
+      <div class="badge" id="availability-label">Available for acquisition</div>
       <div class="lang">
         <button id="btn-fr" aria-pressed="false">FR</button>
         <button id="btn-en" aria-pressed="true">EN</button>
@@ -160,6 +160,7 @@
         <a class="btn primary" href="mailto:contact@quantacure.ai?subject=Quantacure.ai%20-%20NDA%20%2F%20Proposition&body=Bonjour%2C%0D%0A%0D%0AJe%20souhaite%20obtenir%20votre%20NDA%20et%2For%20proposer%20une%20offre%20pour%20Quantacure.ai.%0D%0AEntreprise%20%3A%20%0D%0ANom%20%2F%20Fonction%20%3A%20%0D%0AUsage%20pr%C3%A9vu%20%3A%20%0D%0ABudget%20indicatif%20%3A%20%0D%0A%0D%0ACordialement%2C">
           Proposer une offre / Demander un NDA
         </a>
+        <!-- pas de bouton Concept Note sur la vue FR pour un .ai -->
         <a class="btn" href="#value-fr">Pourquoi ce nom ?</a>
         <a class="btn" href="https://www.linkedin.com/company/quantacure-ai" target="_blank" rel="noopener" aria-label="Ouvrir la page LinkedIn Quantacure.ai">
           <svg class="ico" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M4.98 3.5C4.98 4.88 3.85 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1s2.48 1.12 2.48 2.5zM.5 8.5h4V23h-4V8.5zM8.5 8.5h3.8v2h.05c.53-1 1.84-2.05 3.78-2.05 4.04 0 4.79 2.66 4.79 6.13V23h-4v-6.5c0-1.55-.03-3.54-2.16-3.54-2.16 0-2.49 1.68-2.49 3.43V23h-4V8.5z"/></svg>
@@ -243,6 +244,10 @@
         <a class="btn primary" href="mailto:contact@quantacure.ai?subject=Quantacure.ai%20-%20NDA%20%2F%20Offer&body=Hello%2C%0D%0A%0D%0AI%27d%20like%20to%20request%20your%20NDA%20and%2For%20submit%20an%20offer%20for%20Quantacure.ai.%0D%0ACompany%3A%20%0D%0AName%20%2F%20Role%3A%20%0D%0AIntended%20use%3A%20%0D%0ABudget%20range%3A%20%0D%0ABest%2C">
           Submit an offer / Request NDA
         </a>
+        <!-- bouton Concept Note EN uniquement -->
+        <a class="btn" href="/concept-note.html">
+          Concept Note
+        </a>
         <a class="btn" href="#value-en">Why this name?</a>
         <a class="btn" href="https://www.linkedin.com/company/quantacure-ai" target="_blank" rel="noopener" aria-label="Open Quantacure.ai on LinkedIn">
           <svg class="ico" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M4.98 3.5C4.98 4.88 3.85 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1s2.48 1.12 2.48 2.5zM.5 8.5h4V23h-4V8.5zM8.5 8.5h3.8v2h.05c.53-1 1.84-2.05 3.78-2.05 4.04 0 4.79 2.66 4.79 6.13V23h-4v-6.5c0-1.55-.03-3.54-2.16-3.54-2.16 0-2.49 1.68-2.49 3.43V23h-4V8.5z"/></svg>
@@ -323,13 +328,22 @@
   <script>
     const frBtn = document.getElementById('btn-fr');
     const enBtn = document.getElementById('btn-en');
+    const availabilityLabel = document.getElementById('availability-label');
 
     const show = (lang) => {
       document.querySelectorAll('[data-fr]').forEach(n => n.hidden = (lang !== 'fr'));
       document.querySelectorAll('[data-en]').forEach(n => n.hidden = (lang !== 'en'));
+
       frBtn.setAttribute('aria-pressed', String(lang === 'fr'));
       enBtn.setAttribute('aria-pressed', String(lang === 'en'));
+
       document.documentElement.lang = lang;
+
+      if (availabilityLabel) {
+        availabilityLabel.textContent = (lang === 'fr')
+          ? 'Disponible à l’acquisition'
+          : 'Available for acquisition';
+      }
     };
 
     frBtn.addEventListener('click', () => show('fr'));
